<resources>
    <string name="app_name">mathTester</string>
    <string name="subject">请回答下面的问题：</string>
    <string name="add1">add1</string>
    <string name="symbol">+</string>
    <string name="add2">add2</string>
    <string name="result"></string>
    <string name="equal">=</string>
    <string name="submit">提交</string>
    <string name="next">下一题</string>
    <string name="correct"></string>
</resources>
